@@ -25,6 +25,7 @@ import org.chromium.base.ObserverList;
 import org.chromium.base.Token;
 import org.chromium.base.metrics.RecordHistogram;
 import org.chromium.base.metrics.RecordUserAction;
+import org.chromium.base.process_launcher.ScopedServiceBindingBatch;
 import org.chromium.base.supplier.LazyOneshotSupplier;
 import org.chromium.base.supplier.ObservableSupplier;
 import org.chromium.base.supplier.ObservableSupplierImpl;
@@ -46,6 +47,8 @@ import org.chromium.chrome.browser.tabmodel.NextTabPolicy.NextTabPolicySupplier;
 import org.chromium.chrome.browser.tabmodel.PendingTabClosureManager.PendingTabClosureDelegate;
 import org.chromium.chrome.browser.tabmodel.TabGroupModelFilterObserver.DidRemoveTabGroupReason;
 import org.chromium.components.tab_groups.TabGroupColorId;
+import org.chromium.components.tabs.TabStripCollection;
+import org.chromium.components.ukm.UkmRecorder;
 import org.chromium.content_public.browser.WebContents;
 
 import java.util.ArrayList;
@@ -79,6 +82,9 @@ import java.util.function.Supplier;
 @JNINamespace("tabs")
 public class TabCollectionTabModelImpl extends TabModelJniBridge
         implements TabGroupModelFilterInternal {
+    /** The name of the UKM event used for tab state changes. */
+    private static final String UKM_METRICS_TAB_STATE_CHANGED = "Tab.StateChange";
+
     /**
      * Holds data for an individual tab that was part of a group merge operation that may be undone.
      */
@@ -163,6 +169,13 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
         @Override
         public void insertUndoneTabClosureAt(Tab tab, int insertIndex) {
             assert !tab.isDestroyed() : "Attempting to undo tab that is destroyed.";
+
+            // Alert observers that the tab closure will be undone. Intentionally notifies before
+            // the tabs have been re-inserted into the model.
+            for (TabModelObserver obs : mTabModelObservers) {
+                obs.willUndoTabClosure(Collections.singletonList(tab), /* isAllTabs= */ false);
+            }
+
             Token tabGroupId = tab.getTabGroupId();
             boolean restoredTabGroup = tabGroupId != null && !tabGroupExists(tabGroupId);
             int finalIndex =
@@ -202,7 +215,7 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
             // * UndoRefocusHelper may update the index out-of-band.
             for (TabModelObserver obs : mTabModelObservers) {
                 if (ChromeFeatureList.sTabClosureMethodRefactor.isEnabled()) {
-                    obs.onTabCloseUndone(List.of(tab), /* isAllTabs= */ false);
+                    obs.onTabCloseUndone(Collections.singletonList(tab), /* isAllTabs= */ false);
                 } else {
                     obs.tabClosureUndone(tab);
                 }
@@ -530,47 +543,54 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
     @Override
     public void setIndex(int i, final @TabSelectionType int type) {
         assertOnUiThread();
+
         // TODO(crbug.com/425344200): Prevent passing negative indices.
         if (mIsArchivedTabModel) return;
         if (mNativeTabCollectionTabModelImplPtr == 0) return;
 
-        // When we select a tab in this model it should become the active model. This is the
-        // existing behavior of TabModelImpl.
-        if (!isActiveModel()) mModelDelegate.selectModel(isIncognito());
+        // Batch service binding updates for the tabs becoming active and inactive. The activeness
+        // change usually causes visibility changes, which updates service bindings of subframes at
+        // the same time.
+        try (ScopedServiceBindingBatch scope = ScopedServiceBindingBatch.scoped()) {
+            // When we select a tab in this model it should become the active model. This is the
+            // existing behavior of TabModelImpl.
+            if (!isActiveModel()) mModelDelegate.selectModel(isIncognito());
 
-        Tab oldSelectedTab = mCurrentTabSupplier.get();
-        int lastId = (oldSelectedTab == null) ? Tab.INVALID_TAB_ID : oldSelectedTab.getId();
+            Tab oldSelectedTab = mCurrentTabSupplier.get();
+            int lastId = (oldSelectedTab == null) ? Tab.INVALID_TAB_ID : oldSelectedTab.getId();
 
-        int currentTabCount = getCount();
-        final Tab newSelectedTab;
-        if (currentTabCount == 0) {
-            newSelectedTab = null;
-        } else {
-            newSelectedTab = getTabAt(MathUtils.clamp(i, 0, currentTabCount - 1));
-        }
-        mModelDelegate.requestToShowTab(newSelectedTab, type);
-        mCurrentTabSupplier.set(newSelectedTab);
-
-        if (newSelectedTab != null) {
-            Token tabGroupId = newSelectedTab.getTabGroupId();
-            boolean isInGroup = tabGroupId != null;
-            if (isInGroup) {
-                assumeNonNull(tabGroupId);
-                setLastShownTabForGroup(tabGroupId, newSelectedTab);
+            int currentTabCount = getCount();
+            final Tab newSelectedTab;
+            if (currentTabCount == 0) {
+                newSelectedTab = null;
+            } else {
+                newSelectedTab = getTabAt(MathUtils.clamp(i, 0, currentTabCount - 1));
             }
-            RecordHistogram.recordBooleanHistogram("TabGroups.SelectedTabInTabGroup", isInGroup);
+            mModelDelegate.requestToShowTab(newSelectedTab, type);
+            mCurrentTabSupplier.set(newSelectedTab);
 
-            for (TabModelObserver obs : mTabModelObservers) {
-                obs.didSelectTab(newSelectedTab, type, lastId);
-                // Required, otherwise the previously active tab will have MULTISELECTED as its
-                // VisualState.
-                obs.onTabSelectionChanged();
-            }
+            if (newSelectedTab != null) {
+                Token tabGroupId = newSelectedTab.getTabGroupId();
+                boolean isInGroup = tabGroupId != null;
+                if (isInGroup) {
+                    assumeNonNull(tabGroupId);
+                    setLastShownTabForGroup(tabGroupId, newSelectedTab);
+                }
+                RecordHistogram.recordBooleanHistogram(
+                        "TabGroups.SelectedTabInTabGroup", isInGroup);
 
-            boolean wasAlreadySelected =
-                    (newSelectedTab.getId() == lastId && lastId != Tab.INVALID_TAB_ID);
-            if (!wasAlreadySelected && type == TabSelectionType.FROM_USER) {
-                RecordUserAction.record("MobileTabSwitched");
+                for (TabModelObserver obs : mTabModelObservers) {
+                    obs.didSelectTab(newSelectedTab, type, lastId);
+                    // Required, otherwise the previously active tab will have MULTISELECTED as its
+                    // VisualState.
+                    obs.onTabsSelectionChanged();
+                }
+
+                boolean wasAlreadySelected =
+                        (newSelectedTab.getId() == lastId && lastId != Tab.INVALID_TAB_ID);
+                if (!wasAlreadySelected && type == TabSelectionType.FROM_USER) {
+                    RecordUserAction.record("MobileTabSwitched");
+                }
             }
         }
     }
@@ -610,8 +630,25 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
     }
 
     @Override
-    public void pinTab(int tabId) {
-        updatePinnedState(tabId, /* isPinned= */ true);
+    public void pinTab(
+            int tabId,
+            boolean showUngroupDialog,
+            @Nullable TabModelActionListener tabModelActionListener) {
+        Tab tab = getTabById(tabId);
+        if (tab == null) return;
+        if (tab.getIsPinned()) return;
+
+        TabPinnerActionListener listener =
+                new TabPinnerActionListener(
+                        () -> updatePinnedState(tabId, /* isPinned= */ true),
+                        tabModelActionListener);
+        getTabUngrouper()
+                .ungroupTabs(
+                        Collections.singletonList(tab),
+                        /* trailing= */ true,
+                        showUngroupDialog,
+                        listener);
+        listener.pinIfCollaborationDialogShown();
     }
 
     @Override
@@ -785,12 +822,19 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
                 .getIndexOfFirstNonPinnedTab(mNativeTabCollectionTabModelImplPtr);
     }
 
+    @Override
+    public @Nullable TabStripCollection getTabStripCollection() {
+        if (mNativeTabCollectionTabModelImplPtr == 0) return null;
+        return TabCollectionTabModelImplJni.get()
+                .getTabStripCollection(mNativeTabCollectionTabModelImplPtr);
+    }
+
     // TabCloser overrides.
 
     @Override
     public boolean closeTabs(TabClosureParams params) {
         assertOnUiThread();
-        boolean allowUndo = params.allowUndo && supportsPendingClosures();
+        boolean allowUndo = !params.uponExit && params.allowUndo && supportsPendingClosures();
 
         if (!allowUndo) {
             // The undo stacks assumes that previous actions in the stack are undoable. If an entry
@@ -847,7 +891,7 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
                 maybeSendCloseTabGroupEvent(tabsToClose, /* committing= */ false);
         if (params.tabCloseType == TabCloseType.MULTIPLE) {
             for (TabModelObserver obs : mTabModelObservers) {
-                obs.willCloseMultipleTabs(false, tabsToClose);
+                obs.willCloseMultipleTabs(allowUndo, tabsToClose);
             }
         } else if (params.tabCloseType == TabCloseType.ALL) {
             for (TabModelObserver obs : mTabModelObservers) {
@@ -1686,7 +1730,7 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
             mPendingTabClosureManager.resetState();
         }
 
-        if (ChromeFeatureList.sTabFreezeOnUndoableClosureKillSwitch.isEnabled() && pauseMedia) {
+        if (pauseMedia) {
             for (Tab tab : tabsToRemove) {
                 if (!TabUtils.isCapturingForMedia(tab)) continue;
                 // If media is being captured freeze the tab to disconnect it.
@@ -1731,6 +1775,14 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
 
         if (isPinned) {
             recordPinTimestamp(tab);
+
+            WebContents webContents = tab.getWebContents();
+            if (webContents != null) {
+                new UkmRecorder(webContents, UKM_METRICS_TAB_STATE_CHANGED)
+                        .addBooleanMetric("IsPinned")
+                        .record();
+            }
+
         } else {
             recordPinnedDuration(tab);
         }
@@ -2344,5 +2396,8 @@ public class TabCollectionTabModelImpl extends TabModelJniBridge
                 long nativeTabCollectionTabModelImpl, @JniType("base::Token") Token tabGroupId);
 
         int getIndexOfFirstNonPinnedTab(long nativeTabCollectionTabModelImpl);
+
+        @JniType("tabs::TabStripCollection*")
+        TabStripCollection getTabStripCollection(long nativeTabCollectionTabModelImpl);
     }
 }
